@@ -9,3 +9,4 @@
 /Plack-App-BeanstalkConsole-*/
 /Plack-App-BeanstalkConsole-*.tar.gz
 /t/app/
+/beanstalk_console.zip
