@@ -15,7 +15,7 @@ StaticInstall.mode = off    ; sharedir, configure-requires prereqs
 ; comment this out if doing a lot of release-time testing that does not
 ; require running the application, so we don't hammer github
 [=inc::DownloadShareDirContent]
-url = http://github.com/downloads/ptrofimov/beanstalk_console/beanstalk_console.zip
+url = https://github.com/ptrofimov/beanstalk_console/archive/master.zip
 
 [CheckBin]
 command = php-cgi
